--- a/OCEANOGRAPHIC_CONSECUTIVEMONTHS.ipynb
+++ b/OCEANOGRAPHIC_CONSECUTIVEMONTHS.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "14c1511e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved all variables monthly averages to /Users/sayooj/Downloads/all_variables_monthly_avg_overall.nc\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xarray as xr\n",
     "\n",
@@ -48,67 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cd42f590",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Results for fgco2 in CCAL in 2014/2016:\n",
-      "Median p-value: 6.460127941801471e-28\n",
-      "Median median difference: -0.09278249740600586\n",
-      "Median standard deviation: 0.13604544914334182\n",
-      "\n",
-      "Results for ph_total in CCAL in 2014/2016:\n",
-      "Median p-value: 1.6262504550301624e-64\n",
-      "Median median difference: -0.02546215057373047\n",
-      "Median standard deviation: 0.0027541383948187304\n",
-      "\n",
-      "Results for omega_ar in CCAL in 2014/2016:\n",
-      "Median p-value: 1.2918921238010586e-57\n",
-      "Median median difference: -0.07430696487426758\n",
-      "Median standard deviation: 0.059402633303929545\n",
-      "\n",
-      "Results for temperature in CCAL in 2014/2016:\n",
-      "Median p-value: 3.2099959431243583e-40\n",
-      "Median median difference: 0.44243717193603516\n",
-      "Median standard deviation: 0.4481892208296697\n",
-      "\n",
-      "Results for spco2 in CCAL in 2014/2016:\n",
-      "Median p-value: 1.626340965000086e-64\n",
-      "Median median difference: 21.36309814453125\n",
-      "Median standard deviation: 3.874422261395356\n",
-      "\n",
-      "Results for talk in CCAL in 2014/2016:\n",
-      "Median p-value: 7.175636407185425e-13\n",
-      "Median median difference: 0.737060546875\n",
-      "Median standard deviation: 1.959731090005595\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xarray as xr\n",
     "import numpy as np\n",
     "from scipy.stats import wilcoxon\n",
     "import netCDF4 as nc\n",
     "import pandas as pd\n",
-    "import pandas as pd\n",
     "from docx import Document\n",
+    "import os\n",
+    "import csv\n",
     "\n",
     "# Read parameter combinations from CSV file\n",
     "csv_file_path = \"/Users/sayooj/Downloads/PARAMETERS.csv\"  # Replace with the actual path\n",
@@ -435,8 +381,8 @@
     "    non_heatwave_data = {var: non_heatwave_dataset_file.variables[var][:] for var in variables_non_heatwave}\n",
     "\n",
     "    # Create the time axis for the specified years\n",
-    "    dates = pd.date_range(start='1982-01-01', end='2020-12-31', freq='M')  # Assuming 1982-01-01 is the start of your dataset\n",
-    "\n",
+    "    dates = pd.date_range(start='1982-01-01', end='2020-12-31', freq='M')  \n",
+    "    \n",
     "    # Find the indices corresponding to the time period\n",
     "    start_index = (start_year - 1982) * 12\n",
     "    end_index = start_index + (end_year - start_year + 1) * 12\n",
@@ -461,6 +407,9 @@
     "\n",
     "    # Iterate over each variable for analysis\n",
     "    for variable in variables_heatwave:\n",
+    "        # Initialize a list to store results for each variable\n",
+    "        results = []\n",
+    "\n",
     "        # Get the data for the variable\n",
     "        variable_heatwave = heatwave_data_year[variable]\n",
     "        variable_non_heatwave = non_heatwave_data_year[variable]\n",
@@ -514,28 +463,35 @@
     "        median_median_diff = np.median(median_diff_region_year)\n",
     "        median_std_dev = np.median(std_dev_region_year)\n",
     "\n",
+    "        # Define the function to determine significance\n",
+    "        def determine_significance(p_value):\n",
+    "            if p_value < 0.01:\n",
+    "                return \"Significant\"\n",
+    "            else:\n",
+    "                return \"Not Significant\"\n",
+    "\n",
     "        # Determine significance\n",
     "        significance = determine_significance(median_p_value)\n",
     "\n",
     "        # Append results to the list\n",
-    "        results.append([region_name, start_year, end_year, months_after, consecutive_months_threshold, variable, median_p_value, median_median_diff, median_std_dev, significance])\n",
+    "        results.append([region_name, start_year, end_year, consecutive_months_threshold, months_after, combined_cat_values, variable, median_p_value, median_median_diff, median_std_dev, significance])\n",
     "\n",
-    "    # Define the file name for the CSV\n",
-    "    csv_filename = f\"results_{combined_cat_values}.csv'\n",
+    "        # Define the file name for the CSV\n",
+    "        csv_filename = f'results_cat{combined_cat_values}.csv'\n",
     "\n",
-    "    # Check if the file exists, if not, create it and write the header\n",
-    "    if not os.path.exists(csv_filename):\n",
-    "        with open(csv_filename, 'w', newline='') as csvfile:\n",
+    "        # Check if the file exists, if not, create it and write the header\n",
+    "        if not os.path.exists(csv_filename):\n",
+    "            with open(csv_filename, 'w', newline='') as csvfile:\n",
+    "                csv_writer = csv.writer(csvfile)\n",
+    "                # Write header\n",
+    "                csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"months_after\", \"Consecutive Months Threshold\", \"months_after\", \"combined_cat_values\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\"])\n",
+    "        # Append data to CSV\n",
+    "        with open(csv_filename, 'a', newline='') as csvfile:\n",
     "            csv_writer = csv.writer(csvfile)\n",
-    "            # Write header\n",
-    "            csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"Months After\", \"Consecutive Months Threshold\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\"])\n",
-    "    # Append data to CSV\n",
-    "    with open(csv_filename, 'a', newline='') as csvfile:\n",
-    "        csv_writer = csv.writer(csvfile)\n",
-    "        # Write data rows\n",
-    "        csv_writer.writerows(results)\n",
+    "            # Write data rows\n",
+    "            csv_writer.writerows(results)\n",
     "\n",
-    "    print(\"Results appended to\", csv_filename)"
+    "        print(\"Results for\", variable, \"in\", region_name, \"appended to\", csv_filename)"
    ]
   },
   {
