--- a/OCEANOGRAPHIC_MONTHS_AFTER.ipynb
+++ b/OCEANOGRAPHIC_MONTHS_AFTER.ipynb
@@ -2,217 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e7d5222f",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/xarray/coding/variables.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  condition |= data == fv\n",
-      "/Users/sayooj/opt/anaconda3/envs/fe_work_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:755: UserWarning: Warning: 'partition' will ignore the 'mask' of the MaskedArray.\n",
-      "  a.partition(kth, axis=axis, kind=kind, order=order)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results appended to resultsfft.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xarray as xr\n",
     "import numpy as np\n",
@@ -221,6 +16,8 @@
     "import pandas as pd\n",
     "import pandas as pd\n",
     "from docx import Document\n",
+    "import os\n",
+    "import csv\n",
     "\n",
     "# Read parameter combinations from CSV file\n",
     "csv_file_path = \"/Users/sayooj/Downloads/PARAMETERS.csv\"  # Replace with the actual path\n",
@@ -672,18 +469,11 @@
     "    # Get indices where the mask values are not equal to any of the specified cat values (e.g., non-heatwave period)\n",
     "    indices_non_heatwave_region_year = np.where(~np.isin(mask_region, combined_cat_values))[0]\n",
     "\n",
-    "    # Define significance level\n",
-    "    significance_level = 0.01\n",
-    "\n",
-    "    # Define a function to determine significance\n",
-    "    def determine_significance(p_value):\n",
-    "        return \"Significant\" if p_value <= significance_level else \"Non-Significant\"\n",
-    "\n",
-    "    # Initialize lists to store results for each variable\n",
-    "    results = []\n",
-    "\n",
     "    # Iterate over each variable for analysis\n",
     "    for variable in variables_heatwave:\n",
+    "        # Initialize a list to store results for each variable\n",
+    "        results = []\n",
+    "\n",
     "        # Get the data for the variable\n",
     "        variable_heatwave = heatwave_data_year[variable]\n",
     "        variable_non_heatwave = non_heatwave_data_year[variable]\n",
@@ -737,44 +527,62 @@
     "        median_median_diff = np.median(median_diff_region_year)\n",
     "        median_std_dev = np.median(std_dev_region_year)\n",
     "\n",
+    "        # Define the function to determine significance\n",
+    "        def determine_significance(p_value):\n",
+    "            if p_value < 0.01:\n",
+    "                return \"Significant\"\n",
+    "            else:\n",
+    "                return \"Not Significant\"\n",
+    "\n",
     "        # Determine significance\n",
     "        significance = determine_significance(median_p_value)\n",
     "\n",
     "        # Append results to the list\n",
-    "        results.append([region_name, start_year, end_year, months_after, combined_cat_values, consecutive_months_threshold, variable, median_p_value, median_median_diff, median_std_dev, significance])\n",
+    "        results.append([region_name, start_year, end_year, consecutive_months_threshold, months_after, combined_cat_values, variable, median_p_value, median_median_diff, median_std_dev, significance])\n",
     "\n",
-    "    # Define the file name for the CSV\n",
-    "    csv_filename = f'results_{combined_cat_values}.csv'\n",
+    "        # Define the file name for the CSV\n",
+    "        csv_filename = f'results_cat{combined_cat_values}.csv'\n",
     "\n",
-    "    # Check if the file exists, if not, create it and write the header\n",
-    "    if not os.path.exists(csv_filename):\n",
-    "        with open(csv_filename, 'w', newline='') as csvfile:\n",
+    "        # Check if the file exists, if not, create it and write the header\n",
+    "        if not os.path.exists(csv_filename):\n",
+    "            with open(csv_filename, 'w', newline='') as csvfile:\n",
+    "                csv_writer = csv.writer(csvfile)\n",
+    "                # Write header\n",
+    "                csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"months_after\", \"Consecutive Months Threshold\", \"combined_cat_values\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\"])\n",
+    "        # Append data to CSV\n",
+    "        with open(csv_filename, 'a', newline='') as csvfile:\n",
     "            csv_writer = csv.writer(csvfile)\n",
-    "            # Write header\n",
-    "            csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"Months After\", \"Consecutive Months Threshold\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\"])\n",
-    "    # Append data to CSV\n",
-    "    with open(csv_filename, 'a', newline='') as csvfile:\n",
-    "        csv_writer = csv.writer(csvfile)\n",
-    "        # Write data rows\n",
-    "        csv_writer.writerows(results)\n",
+    "            # Write data rows\n",
+    "            csv_writer.writerows(results)\n",
     "\n",
-    "    print(\"Results appended to\", csv_filename)"
+    "        print(\"Results for\", variable, \"in\", region_name, \"appended to\", csv_filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "f0f3fbee",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'combined_cat_values' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/j0/jpmm57316zs037hp4h9sj8pr0000gn/T/ipykernel_55562/3776967403.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'results_cat{}.csv'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcombined_cat_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcombined_cat_values\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Separate data by variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'combined_cat_values' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "# Read data from CSV file\n",
-    "data = pd.read_csv(f'results_{combined_cat_values}.csv')\n",
+    "data = pd.read_csv('results_cat{}.csv'.format(combined_cat_values[0], combined_cat_values[1]))\n",
     "\n",
     "# Separate data by variable\n",
     "variables = data['Parameter'].unique()\n",
@@ -794,10 +602,10 @@
     "        variable_data = region_data[region_data['Parameter'] == variable]\n",
     "\n",
     "        # Sort the data by Months After for a better visualization\n",
-    "        variable_data.sort_values(by='Months After', inplace=True)\n",
+    "        variable_data.sort_values(by='months_after', inplace=True)\n",
     "\n",
     "        # Create a step digital signal plot with bolder lines\n",
-    "        x_values = variable_data['Months After']\n",
+    "        x_values = variable_data['months_after']\n",
     "        y_values = (variable_data['Significance'] == \"Significant\").astype(int)\n",
     "\n",
     "        axs[i].step(x_values, y_values, where='post', color='darkblue', linewidth=2.5)  # Make the lines bolder\n",
@@ -817,8 +625,8 @@
     "\n",
     "    # Set custom x labels for all subplots\n",
     "    for ax in axs:\n",
-    "        ax.set_xticks(data['Months After'].unique())\n",
-    "        ax.set_xticklabels(data['Months After'].unique().astype(str))\n",
+    "        ax.set_xticks(data['months_after'].unique())\n",
+    "        ax.set_xticklabels(data['months_after'].unique().astype(str))\n",
     "\n",
     "    # Place the plots for \"spco2\" and \"alkalinity\" at the bottom\n",
     "    axs[-1].set_xlabel('Months', fontsize=12)  # Adjust xlabel fontsize\n",
