--- a/OCEANOGRAPHIC_CONSECUTIVEMONTHS.ipynb
+++ b/OCEANOGRAPHIC_CONSECUTIVEMONTHS.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This section should only be run if you don't have file for monthly averages for all oceanographic variables\n",
+    "\n",
     "import xarray as xr\n",
     "\n",
     "# Open the NetCDF file\n",
@@ -359,11 +361,20 @@
     "    # Save the DataFrame to a CSV file with region name, start year, and end year in the filename\n",
     "    csv_file_path = f'/Users/sayooj/Downloads/consecutive_heatwave_info_{region_name}{consecutive_months_threshold}_{start_year}_{end_year}.csv'\n",
     "    consecutive_heatwave_info_df.to_csv(csv_file_path, index=False)\n",
+    "    \n",
+    "    # Read the CSV file into a DataFrame\n",
+    "    consecutive_heatwave_info_df = pd.read_csv(f'/Users/sayooj/Downloads/consecutive_heatwave_info_{region_name}{consecutive_months_threshold}_{start_year}_{end_year}.csv')\n",
     "\n",
-    "    import numpy as np\n",
-    "    from scipy.stats import wilcoxon\n",
-    "    import netCDF4 as nc\n",
-    "    import pandas as pd\n",
+    "    # Convert the 'exact_dates' column from string to list of datetime objects\n",
+    "    consecutive_heatwave_info_df['exact_dates'] = consecutive_heatwave_info_df['exact_dates'].apply(eval)\n",
+    "    consecutive_heatwave_info_df['exact_dates'] = consecutive_heatwave_info_df['exact_dates'].apply(lambda dates: [pd.to_datetime(date).date() for date in dates])\n",
+    "\n",
+    "    # Extract the date portion from the third date in each list of exact dates\n",
+    "    third_dates = consecutive_heatwave_info_df['exact_dates'].apply(lambda dates: dates[2])\n",
+    "\n",
+    "    # Find the min and max date among the extracted third dates\n",
+    "    hw_first_date = min(third_dates)\n",
+    "    hw_last_date = max(third_dates)\n",
     "\n",
     "    # Section 4: Statistical Analysis\n",
     "    # Open the heatwave dataset file\n",
@@ -472,19 +483,31 @@
     "\n",
     "        # Determine significance\n",
     "        significance = determine_significance(median_p_value)\n",
+    "        \n",
+    "        results = []\n",
     "\n",
     "        # Append results to the list\n",
-    "        results.append([region_name, start_year, end_year, consecutive_months_threshold, months_after, combined_cat_values, variable, median_p_value, median_median_diff, median_std_dev, significance])\n",
+    "        results.append([region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, variable, median_p_value, median_median_diff, median_std_dev, significance, hw_first_date, hw_last_date])\n",
     "\n",
-    "        # Define the file name for the CSV\n",
-    "        csv_filename = f'results_cat{combined_cat_values}.csv'\n",
+    "        # Extract combined category values from the first row of the 'combined_cat_values' column\n",
+    "        combined_cat_values = parameters_df['combined_cat_values'].iloc[0]\n",
+    "\n",
+    "        # Extract the numbers from the combined_cat_values string\n",
+    "        numbers = ''.join(filter(str.isdigit, combined_cat_values))\n",
+    "\n",
+    "        # Insert an underscore between the numbers\n",
+    "        formatted_numbers = '_'.join(numbers)\n",
+    "\n",
+    "        # Construct the filename\n",
+    "        csv_filename = f\"results_cat_{formatted_numbers}.csv\"\n",
     "\n",
     "        # Check if the file exists, if not, create it and write the header\n",
     "        if not os.path.exists(csv_filename):\n",
     "            with open(csv_filename, 'w', newline='') as csvfile:\n",
     "                csv_writer = csv.writer(csvfile)\n",
     "                # Write header\n",
-    "                csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"months_after\", \"Consecutive Months Threshold\", \"months_after\", \"combined_cat_values\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\"])\n",
+    "                csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"months_after\", \"Consecutive Months Threshold\", \"combined_cat_values\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\", \"HW Start Date\", \"HW End Date\"])\n",
+    "\n",
     "        # Append data to CSV\n",
     "        with open(csv_filename, 'a', newline='') as csvfile:\n",
     "            csv_writer = csv.writer(csvfile)\n",
@@ -497,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8fa46dd",
+   "id": "99b83649",
    "metadata": {},
    "outputs": [],
    "source": []
