--- a/OCEANOGRAPHIC_MONTHS_AFTER.ipynb
+++ b/OCEANOGRAPHIC_MONTHS_AFTER.ipynb
@@ -14,10 +14,10 @@
     "from scipy.stats import wilcoxon\n",
     "import netCDF4 as nc\n",
     "import pandas as pd\n",
-    "import pandas as pd\n",
     "from docx import Document\n",
     "import os\n",
     "import csv\n",
+    "   \n",
     "\n",
     "# Read parameter combinations from CSV file\n",
     "csv_file_path = \"/Users/sayooj/Downloads/PARAMETERS.csv\"  # Replace with the actual path\n",
@@ -422,12 +422,6 @@
     "    # Close the netCDF file\n",
     "    monthly_masks_file.close()\n",
     "    \n",
-    "    import numpy as np\n",
-    "    from scipy.stats import wilcoxon\n",
-    "    import netCDF4 as nc\n",
-    "    import pandas as pd\n",
-    "    import csv\n",
-    "    import os\n",
     "\n",
     "    # Section 4: Statistical Analysis\n",
     "    # Open the heatwave dataset file\n",
@@ -539,16 +533,26 @@
     "\n",
     "        # Append results to the list\n",
     "        results.append([region_name, start_year, end_year, consecutive_months_threshold, months_after, combined_cat_values, variable, median_p_value, median_median_diff, median_std_dev, significance])\n",
+    "       \n",
+    "        # Extract combined category values from the first row of the 'combined_cat_values' column\n",
+    "        combined_cat_values = parameters_df['combined_cat_values'].iloc[0]\n",
     "\n",
-    "        # Define the file name for the CSV\n",
-    "        csv_filename = f'results_cat{combined_cat_values}.csv'\n",
+    "        # Extract the numbers from the combined_cat_values string\n",
+    "        numbers = ''.join(filter(str.isdigit, combined_cat_values))\n",
+    "\n",
+    "        # Insert an underscore between the numbers\n",
+    "        formatted_numbers = '_'.join(numbers)\n",
+    "\n",
+    "        # Construct the filename\n",
+    "        csv_filename = f\"results_cat_{formatted_numbers}.csv\"\n",
     "\n",
     "        # Check if the file exists, if not, create it and write the header\n",
     "        if not os.path.exists(csv_filename):\n",
     "            with open(csv_filename, 'w', newline='') as csvfile:\n",
     "                csv_writer = csv.writer(csvfile)\n",
     "                # Write header\n",
-    "                csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"months_after\", \"Consecutive Months Threshold\", \"combined_cat_values\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\"])\n",
+    "                csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"months_after\", \"Consecutive Months Threshold\", \"combined_cat_values\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\", \"HW Start Date\", \"HW End Date\"])\n",
+    "\n",
     "        # Append data to CSV\n",
     "        with open(csv_filename, 'a', newline='') as csvfile:\n",
     "            csv_writer = csv.writer(csvfile)\n",
@@ -570,7 +574,18 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('results_cat{}.csv'.format(combined_cat_values[0], combined_cat_values[1]))\n",
+    "# Extract combined category values from the first row of the 'combined_cat_values' column\n",
+    "csv_file_path = \"/Users/sayooj/Downloads/PARAMETERS.csv\"\n",
+    "parameters_df = pd.read_csv(csv_file_path)\n",
+    "combined_cat_values = parameters_df['combined_cat_values'].iloc[0]\n",
+    "\n",
+    "# Extract the numbers from the combined_cat_values string\n",
+    "numbers = ''.join(filter(str.isdigit, combined_cat_values))\n",
+    "\n",
+    "# Insert an underscore between the numbers\n",
+    "formatted_numbers = '_'.join(numbers)\n",
+    "\n",
+    "data = pd.read_csv(f\"results_cat_{formatted_numbers}.csv\")\n",
     "\n",
     "# Separate data by variable\n",
     "variables = data['Parameter'].unique()\n",
@@ -622,8 +637,7 @@
     "    plt.tight_layout()\n",
     "    \n",
     "    # Save the plot as an image file with region name and year\n",
-    "    combined_values_str = str(region_data['combined_cat_values'].iloc[0])[1:-1]  # Get the value inside the list and remove the brackets\n",
-    "    filename = f'{region}_{start_year}-{end_year}_cat{combined_values_str}_plots.png'\n",
+    "    filename = f'{region}_{start_year}-{end_year}_cat_{formatted_numbers}_plots.png'\n",
     "    fig.savefig(filename)\n",
     "    \n",
     "    # Close the figure to release memory\n",
